# ImageViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ImageViewer.sln  ImageViewer.vcxproj  ImageViewer.vcxproj.filters  ImgWnd.cpp  ImgWnd.h  MainWnd.cpp  MainWnd.h  README.md  resource.aps  resource.h  resource.rc
libjpeg/: jconfigint.h  jpeg-static.lib  turbojpeg-static.lib
libjpeg/Debug/: jpeg-static.lib  jpeg.lib  turbojpeg-static.lib
libjpeg/Release/: jpeg-static.lib  turbojpeg-static.lib  turbojpeg.lib
